--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,6 @@
     <!-- Количество фильмов -->
   </section>
 </footer>
-
+<script type="text/javascript" src="../src/main.js"></script>
 </body>
 </html>
